--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,9 +1,7 @@
-.home{
-    background-color: rgb(0, 95, 0);
+.CardTable{
+    background-color: rgb(1, 69, 1);
+    height: 80vh;
+    padding-top: 25px;
+    margin-top: 25px;
 }
 
-.home-header {
-    display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-}
