--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .NavBar {
-    background-color: rgba(106, 0, 148, 0.800);
+    background-color: rgba(63, 0, 88, 0.8);
     text-align: center;
     font-weight: bold;
   }
@@ -19,5 +19,12 @@
   
   .NavBar a.active {
     font-weight: bold;
-    color: black;
+    color: white;
+  }
+
+  .NavBar-Logo{
+    width: 10rem;
+    margin:5px;
+    border-radius: 9%;
+    box-shadow: 3px 3px 4px grey;
   }
