--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -1,7 +1,8 @@
 .NavBar {
-    background-color: rgba(63, 0, 88, 0.8);
+    background-color: rgb(29, 0, 40);
     text-align: center;
     font-weight: bold;
+    padding: 1em;
   }
   
   .NavBar a {
@@ -18,11 +19,14 @@
   }
   
   .NavBar a.active {
-    font-weight: bold;
+    font-weight: bolder;
     color: white;
+    background-color: black;
   }
 
   .NavBar-Logo{
+    position: absolute;
+    left: 10px;
     width: 10rem;
     margin:5px;
     border-radius: 9%;
