--- a/src/History/History.css
+++ b/src/History/History.css
@@ -33,6 +33,10 @@
 .History-UL{
     text-align: center;
     font-size: 1.2em;
+    width: 40vw;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
     list-style: none;
     color: rgba(63, 0, 88, 0.8);
     text-shadow: 1px 1px 1px rgba(63, 0, 88, 0.8)
