--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,8 +1,11 @@
+body {
+    background-color: rgb(0, 58, 13);
+}
+
 .CardTable{
-    background-color: rgb(1, 69, 1);
-    height: 80vh;
-    padding-top: 25px;
-    margin-top: 25px;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: stretch;
 }
 
 Button {
