--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -28,7 +28,7 @@
     position: absolute;
     left: 10px;
     width: 10rem;
-    margin:5px;
-    border-radius: 9%;
+    opacity: 0.6;
+    border-bottom-right-radius: 30%;
     box-shadow: 3px 3px 4px grey;
   }
