--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -1,13 +1,30 @@
-body {
-    background-color: rgb(0, 58, 13);
+.Home-User-Head{
+    text-align: center;
+    font-style:italic;
+    color: grey;
 }
 
 .CardTable{
+    width: 100vw;
+    margin-top: 10px;
     display: inline-flex;
     flex-direction: row;
-    justify-content: stretch;
+    justify-content: center;
+    flex-wrap: wrap;
+
 }
 
-Button {
+.Home-Button-Layout{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.Home-Button-Draw {
+    margin: 40px;
+    
+}
+
+.Home-Button-Clear{
+    border: 2px red solid;
     margin-top: 40px;
 }
