Routes, Loading logic, and Navbar

--- a/src/Card/Card.css
+++ b/src/Card/Card.css
@@ -4,7 +4,7 @@
 }
 
 .Card-body{
-    width: 18rem;
+    width: 266px;
     background-color: white;
     text-align: center;
 }
@@ -13,7 +13,6 @@
 .Card-keyword{
     text-transform: uppercase;
     text-align:center;
-  
 }
 
 .Card-img{
@@ -23,12 +22,13 @@
     transform-style: preserve-3d;
     transform-origin: center right;
     transition: transform 1s;
+ 
 }
 
-.Card-img:active{
+/* .Card-img{
     transform: translateX(-100%) rotateY(-180deg);
 
-}
+} */
 
 .Card-name{
     font-size: 1.2em;
@@ -37,3 +37,13 @@
     text-shadow: 1px 1px 1px greenyellow
 }
 
+@media screen and (min-width:0px) and (max-width:550px){
+    .Card-img{
+        height:150px;
+        width:88px;
+    }
+    .Card-body{
+   
+        width:400px;
+    }
+}
