--- a/src/Meanings/Meanings.css
+++ b/src/Meanings/Meanings.css
@@ -33,3 +33,27 @@
 .Meanings-Keywords{
     text-transform: capitalize;
 }
+
+@media screen and (max-width:1098px){
+    .Meaning-IMG1{
+       display:none;}
+    
+    .Meaning-IMG2{
+       display:none;
+    
+    }
+    .Meanings-Light {
+        display:none;
+    }
+    .Meanings-Shadow{
+        display:none;
+    }
+    .Meanings-P {
+        text-align: center;
+        font-size: 1.2em;
+        width: 80vw;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 25px;
+    }
+}
